--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^1.6.10",
-    "telefunc": "^0.1.39"
+    "astro": "next--telefunc",
+    "telefunc": "^0.1.40"
   }
 }
